tests/NormalTests/paczka1/small_fuzzy/96999252.err
Error in line 11: PtSADSllTpC A241 26,"
